@@ -1,1 +1,0 @@
-* option to use an open filehandle
